chore: change travis config to install packeges dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
 after_success:
   - "./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
 script:
+	- "lerna install"
   - "yerna run test"
