--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 after_success:
   - "./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
 script:
-	- "lerna install"
-  - "yerna run test"
+	- "./node_modules/.bin/lerna install"
+  - "./node_modules/.bin/yerna run test"
