--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -10,10 +10,10 @@
   "author": "Bruno Bertolini <dev@brunobertolini.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "xo",
-    "reports": "nyc report --reporter=html",
+    "lint": "./node_modules/.bin/xo",
+    "reports": "./node_modules/.bin/nyc report --reporter=html",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
-    "spec": "nyc ava",
+    "spec": "./node_modules/.bin/nyc ./node_modules/.bin/ava",
     "pretest": "yarn run lint",
     "test": "yarn run spec",
     "posttest": "yarn run reports",
@@ -45,8 +45,7 @@
   "dependencies": {
     "cors": "^2.8.0",
     "dotenv": "^4.0.0",
-    "lodash": "^4.17.4",
-    "restify": "^4.1.1"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "ava": "^0.18.2",
