--- a/packages/focalizejs/package.json
+++ b/packages/focalizejs/package.json
@@ -1,6 +1,6 @@
 {
  "name": "focalizejs",
- "version": "0.1.1",
+ "version": "0.2.0",
  "description": "Wrapper to focalize libs",
  "main": "index.js",
  "repository": {
@@ -17,6 +17,7 @@
   "esnext": true
  },
  "dependencies": {
+  "focalize-database": "^0.1.0",
   "focalize-router": "^0.1.1",
   "focalize-server": "^0.1.0",
   "focalize-settings": "^0.2.3"
