--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -43,7 +43,8 @@
     "esnext": true
   },
   "dependencies": {
-    "glob": "^7.1.1"
+    "glob": "^7.1.1",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "ava": "^0.18.2",
